--- a/src/ByteBank.WepApp/Views/Home/PrincipalHome.cshtml
+++ b/src/ByteBank.WepApp/Views/Home/PrincipalHome.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ByteBank.WebApp.Views.ViewModel.UsuarioAppViewModel;
 @{
     ViewData["Title"] = "ByteBank - Aplicação Web";
-    //Layout = "~/Views/Shared/_Layout3.cshtml";
+    Layout = "~/Views/Shared/_Layout3.cshtml";
  }
 <div class="text-center">
     <h1 class="display-4">Boas-Vindas!</h1>
