--- a/src/ByteBank.WepApp/Views/Shared/_Layout2.cshtml
+++ b/src/ByteBank.WepApp/Views/Shared/_Layout2.cshtml
@@ -17,6 +17,11 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+                    <ul class="navbar-nav flex-grow-1">
+                        <li class="nav-item">
+                            <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="PrincipalHome">Home</a>
+                        </li>
+                    </ul>
                     <ul class="navbar-nav flex-grow-2">
                         <li class="nav-item">
                             <a class="nav-link text-white" asp-area="" asp-controller="UsuarioApps" asp-action="Login">Login</a>
