--- a/src/ByteBank.WepApp/Views/Agencia/Create.cshtml
+++ b/src/ByteBank.WepApp/Views/Agencia/Create.cshtml
@@ -4,9 +4,8 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Criar nova Agência</h1>
+<h4>Criar nova Agência</h4>
 
-<h4>Agencia</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -27,14 +26,10 @@
                 <input asp-for="Endereco" class="form-control" />
                 <span asp-validation-for="Endereco" class="text-danger"></span>
             </div>
+            <br />
             <div class="form-group">
-                <label asp-for="Identificador" class="control-label"></label>
-                <input asp-for="Identificador" class="form-control" />
-                <span asp-validation-for="Identificador" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Novo" class="btn btn-primary" />
-                <a asp-action="Index" class="btn btn-secondary">Voltar</a>
+                <input type="submit" value="Novo" class="btn btn-sm btn-outline-primary" />
+                <a asp-action="Index" class="btn btn-sm btn-outline-secondary">Voltar</a>
             </div>
         </form>
     </div>
@@ -43,5 +38,7 @@
 
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+    await Html.RenderPartialAsync("_ValidationScriptsPartial");
+}
 }
