--- a/src/ByteBank.WepApp/Views/Agencia/Details.cshtml
+++ b/src/ByteBank.WepApp/Views/Agencia/Details.cshtml
@@ -4,10 +4,9 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h4>Detalhes da Agência @Model.Nome</h4>
 
 <div>
-    <h4>Agencia</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
@@ -37,6 +36,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-primary">Editar</a> |
-    <a asp-action="Index" class="btn btn-secondary">Voltar</a>
+    <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-sm btn-outline-primary">Editar</a>
+    <a asp-action="Index" class="btn btn-sm btn-outline-secondary">Voltar</a>
 </div>
