--- a/src/ByteBank.WepApp/Views/Agencia/Edit.cshtml
+++ b/src/ByteBank.WepApp/Views/Agencia/Edit.cshtml
@@ -4,9 +4,7 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
-
-<h4>Agencia</h4>
+<h4>Editar Agencia @Model.Nome</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -30,12 +28,13 @@
             </div>
             <div class="form-group">
                 <label asp-for="Identificador" class="control-label"></label>
-                <input asp-for="Identificador" class="form-control" />
+                <input asp-for="Identificador" class="form-control" disabled/>
                 <span asp-validation-for="Identificador" class="text-danger"></span>
             </div>
+            <br />
             <div class="form-group">
-                <input type="submit" value="Salvar" class="btn btn-primary" />
-                <a asp-action="Index" class="btn btn-secondary">Voltar</a>
+                <input type="submit" value="Salvar" class="btn btn-sm btn-outline-primary" />
+                <a asp-action="Index" class="btn btn-sm btn-outline-secondary">Voltar</a>
             </div>
         </form>
     </div>
