--- a/src/ByteBank.WepApp/Views/Clientes/Create.cshtml
+++ b/src/ByteBank.WepApp/Views/Clientes/Create.cshtml
@@ -4,19 +4,18 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Criar novo cliente</h1>
+<h4>Adicionar novo cliente</h4>
 
-<h4>Cliente</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
+@*            <div class="form-group">
                 <label asp-for="Identificador" class="control-label"></label>
                 <input asp-for="Identificador" class="form-control" />
                 <span asp-validation-for="Identificador" class="text-danger"></span>
-            </div>
+            </div>*@
             <div class="form-group">
                 <label asp-for="CPF" class="control-label"></label>
                 <input asp-for="CPF" class="form-control" />
@@ -32,9 +31,10 @@
                 <input asp-for="Profissao" class="form-control" />
                 <span asp-validation-for="Profissao" class="text-danger"></span>
             </div>
+            <br />
             <div class="form-group">
-                <input type="submit" value="Novo" class="btn btn-primary" />
-                <a asp-action="Index" class="btn btn-secondary">Voltar</a>
+                <input type="submit" value="Novo" class="btn btn-outline-primary btn-sm" />
+                <a asp-action="Index" class="btn btn-outline-secondary btn-sm">Voltar</a>
             </div>
         </form>
     </div>
