--- a/src/ByteBank.WepApp/Views/Clientes/Details.cshtml
+++ b/src/ByteBank.WepApp/Views/Clientes/Details.cshtml
@@ -4,18 +4,11 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h4>Detalhes do Cliente @Model.Nome</h4>
 
 <div>
-    <h4>Cliente</h4>
     <hr />
     <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Identificador)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Identificador)
-        </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.CPF)
         </dt>
@@ -34,9 +27,15 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Profissao)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Identificador)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Identificador)
+        </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-primary">Editar</a> |
-    <a asp-action="Index" class="btn btn-secondary">Voltar</a>
+    <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-sm btn-outline-primary">Editar</a>
+    <a asp-action="Index" class="btn btn-sm btn-outline-secondary">Voltar</a>
 </div>
