--- a/src/ByteBank.WepApp/Views/Clientes/Edit.cshtml
+++ b/src/ByteBank.WepApp/Views/Clientes/Edit.cshtml
@@ -4,20 +4,13 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
-
-<h4>Cliente</h4>
+<h4>Editando Cliente @Model.Nome</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
-            <div class="form-group">
-                <label asp-for="Identificador" class="control-label"></label>
-                <input asp-for="Identificador" class="form-control" />
-                <span asp-validation-for="Identificador" class="text-danger"></span>
-            </div>
             <div class="form-group">
                 <label asp-for="CPF" class="control-label"></label>
                 <input asp-for="CPF" class="form-control" />
@@ -34,8 +27,14 @@
                 <span asp-validation-for="Profissao" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Salvar" class="btn btn-primary" />
-                <a asp-action="Index" class="btn btn-secondary">Voltar</a>
+                <label asp-for="Identificador" class="control-label"></label>
+                <input asp-for="Identificador" class="form-control" disabled/>
+                <span asp-validation-for="Identificador" class="text-danger"></span>
+            </div>
+            <br />
+            <div class="form-group">
+                <input type="submit" value="Salvar" class="btn btn-sm btn-outline-primary" />
+                <a asp-action="Index" class="btn btn-sm btn-outline-secondary">Voltar</a>
             </div>
         </form>
     </div>
