--- a/src/ByteBank.WepApp/Views/Clientes/Index.cshtml
+++ b/src/ByteBank.WepApp/Views/Clientes/Index.cshtml
@@ -4,17 +4,14 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Clientes</h1>
+<h4>Clientes</h4>
 
 <p>
-    <a asp-action="Create">Adicionar Cliente</a>
+    <a asp-action="Create" class="btn btn-sm btn-outline-info">Adicionar Cliente</a>
 </p>
-<table class="table table-dark table-striped">
+<table class="table table-white table-striped">
     <thead>
         <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Identificador)
-            </th>
             <th>
                 @Html.DisplayNameFor(model => model.CPF)
             </th>
@@ -24,6 +21,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Profissao)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Identificador)
+            </th>
             <th>Operações</th>
         </tr>
     </thead>
@@ -32,9 +32,6 @@
         {
             <tr>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Identificador)
-                </td>
-                <td>
                     @Html.DisplayFor(modelItem => item.CPF)
                 </td>
                 <td>
@@ -42,6 +39,9 @@
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Profissao)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Identificador)
                 </td>
                 <td>
                     <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-secondary">Editar</a> |
