--- a/src/ByteBank.WepApp/Views/ContaCorrentes/Create.cshtml
+++ b/src/ByteBank.WepApp/Views/ContaCorrentes/Create.cshtml
@@ -1,12 +1,11 @@
 ﻿@model ByteBank.Aplicacao.DTO.ContaCorrenteDTO
 
+
 @{
     ViewData["Title"] = "Create";
 }
 
-<h1>Criar nova Conta Corrente</h1>
-
-<h4>Conta Corrente</h4>
+<h4>Criar Nova Conta Corrente</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -28,11 +27,6 @@
                 <span asp-validation-for="Numero" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Identificador" class="control-label"></label>
-                <input asp-for="Identificador" class="form-control" />
-                <span asp-validation-for="Identificador" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <label asp-for="Saldo" class="control-label"></label>
                 <input asp-for="Saldo" class="form-control" />
                 <span asp-validation-for="Saldo" class="text-danger"></span>
@@ -42,14 +36,18 @@
                 <input asp-for="PixConta" class="form-control" />
                 <span asp-validation-for="PixConta" class="text-danger"></span>
             </div>
+            <br />
             <div class="form-group">
-                <input type="submit" value="Novo" class="btn btn-primary" />
-                <a asp-action="Index" class="btn btn-secondary">Voltar</a>
+                <input type="submit" value="Novo" class="btn btn-sm btn-outline-primary" />
+                <a asp-action="Index" class="btn btn-sm btn-outline-secondary">Voltar</a>
             </div>
         </form>
     </div>
 </div>
 
+
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+    await Html.RenderPartialAsync("_ValidationScriptsPartial");
+}
 }
