--- a/src/ByteBank.WepApp/Views/ContaCorrentes/Edit.cshtml
+++ b/src/ByteBank.WepApp/Views/ContaCorrentes/Edit.cshtml
@@ -4,9 +4,8 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h4>Editando Conta Corrente @Model.Cliente.Nome</h4>
 
-<h4>ContaCorrente</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -29,11 +28,6 @@
                 <span asp-validation-for="Numero" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Identificador" class="control-label"></label>
-                <input asp-for="Identificador" class="form-control" />
-                <span asp-validation-for="Identificador" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <label asp-for="Saldo" class="control-label"></label>
                 <input asp-for="Saldo" class="form-control" />
                 <span asp-validation-for="Saldo" class="text-danger"></span>
@@ -44,8 +38,14 @@
                 <span asp-validation-for="PixConta" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Salvar" class="btn btn-primary" />
-                <a asp-action="Index" class="btn btn-secondary">Voltar</a>
+                <label asp-for="Identificador" class="control-label"></label>
+                <input asp-for="Identificador" class="form-control" disabled />
+                <span asp-validation-for="Identificador" class="text-danger"></span>
+            </div>
+            <br />
+            <div class="form-group">
+                <input type="submit" value="Salvar" class="btn btn-sm btn-outline-primary" />
+                <a asp-action="Index" class="btn btn-sm btn-outline-secondary">Voltar</a>
             </div>
         </form>
     </div>
