--- a/src/ByteBank.WepApp/Views/Shared/_Layout.cshtml
+++ b/src/ByteBank.WepApp/Views/Shared/_Layout.cshtml
@@ -2,7 +2,7 @@
 @inject Microsoft.AspNetCore.Http.IHttpContextAccessor HttpContextAccessor
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
