--- a/src/ByteBank.WepApp/Views/ContaCorrentes/Index.cshtml
+++ b/src/ByteBank.WepApp/Views/ContaCorrentes/Index.cshtml
@@ -13,6 +13,9 @@
         <thead>
             <tr>
                 <th>
+                    Agência
+                </th>
+                <th>
                     @Html.DisplayNameFor(model => model.Numero)
                 </th>
                 <th>
@@ -34,6 +37,9 @@
             @foreach (var item in Model)
             {
                 <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Agencia.Numero)
+                    </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.Numero)
                     </td>
